2005-12-06  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

        * src/hidden3d.c (COORD_TO_TREECELL, COORD_TO_BITMASK): Avoid
        overflow by undoing effect of surface_scale before mapping to
        integers.
        (store_polygon): Add assert()s to internal macros GET_MIN,
        GET_MAX, to catch problems not handled by above changes.
        (in_front): Avoid accessing qlist[-1].  Make sure
        p_list[] is always filled, even if doing a single-vertex pseudo
        edge.

2005-12-05  Ethan Merritt  <merritt@u.washington.edu>

        * src/hidden3d.c (build_networks):  Each plot with style LABELPOINTS
        contains a linked list of labels. But the first label in this list is
        a dummy entry used only as a placeholder for style parameters. The
        hidden3d code was incorrectly counting this as an actual label.
        Fixes at least some instances of bug #1372464.

2005-12-04  Ethan Merritt  <merritt@u.washington.edu>

        * src/gadgets.h: Add new internal linetype LT_COLORFROMCOLUMN

        * src/graph3d.c (do_3dplot): Remove warning if no surface is visible
        in plot with hidden3d set.

        * src/hidden3d.c src/util3d.h: Modify struct vertex so that it contains
        a pointer (lp_style_type *)lp rather than simply an (int)style. This
        allows all the various point properties to be handled in hidden3d mode
        except for variable pointsize. Variable pointsize is handled by adding
        a new field (struct coordinate *)original. This, however, increases the
        size of struct vertex, so it can be configured out under the control of
        HIDDEN3D_VAR_PTSIZE.
        
        * demo/pointsize.dem demo/rgb_variable.dem: Update demos to show off
        use of 'set hidden3d' for 3D point plots.

        * src/graph3d.c src/hidden3d.c: Handle 'splot with vectors' in
        hidden3d mode.

        * demo/molecule.dem demo/GM1_bonds.r3d demo/GM1_sugar.pdb: New